--- a/pageFormat.css
+++ b/pageFormat.css
@@ -1,6 +1,6 @@
 body{
     background-image: url(images/blue.jpg);
-    background-size: cover;
+    background-size: 100% 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
